Text "your own"

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <a href="/"><img src="/img/duck.png" width="30%" height="30%" alt="logo"></a>
             </div>
             <h1>Producker</h1>
-            <h3 class="text-center">The best way to bring idea to life and to create own project. Great place for creators, specialists and investors.</h3>
+            <h3 class="text-center">The best way to bring idea to life and to create your own project. Great place for creators, specialists and investors.</h3>
             <h3>Join forces and create amazing projects.</h3>
             
             <div class="row" id="js-form">
