Switch off spellcheck in form

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <form action="#" class="form-signup js-form-signup">
                         <div class="email-field">
                             <small class="is-invalid-label hide js-invalid-email">Email is not valid</small>
-                            <input type="text" placeholder="Email" id="js-input" required>
+                            <input type="text" placeholder="Email" spellcheck="false" id="js-input" required>
                         </div>
                         <button type="submit" class="button large">Stay Tuned!</button>
                         <p class="caption">We won't spam you!</p>
